    RC1:
    - partial defragmentation was added to decrease number of fragments
      even when there are no free space on disk
      to hold all fragments of file together
    - volume optimization algorithm was improved to prevent useless
      additional optimization passes
    - one little bug preventing optimization from being stopped was fixed
      in driver
    - progress is now added to the GUI window caption,
      so it is displayed in the tooltip of the taskbar icon
    - cryptic single character progress label was replaced
      by the localized operation names
    - fixed a problem where the case of the names of the help pages
      launched from the configuration dialog did not match
    - fixed a problem, where .lua files would get executed instead of edited,
      if "Lua for Windows" was installed
    - the following translations were updated:

      Dutch, Danish, French, Russian, Turkish, Serbian, 


  Version 4.3.0  2010-05-29
  ------------------------------------------------------------------------------
    RC4:
    - GUI window resizing feature was added
    - scaling according to the screens DPI settings added
    - native keyboard check was enhanced to add a delay if one of the first two
      keyboards fail detection
    RC3:
    - driver was improved to better distinguish between free space and MFT zone
    - progress indication was improved in the boot time interface
    - backspace and escape keys handling added to the boot time interactive mode
    - one little bug preventing the root directory from being defragmented fixed
    RC2:
    - --use-entire-window option was added to the command line interface
    - fixed a bug preventing OS version check to work on later Windows versions
    - update check was added to the GUI
    - few wrong prototypes in /src/dll/zenwinx/ntndk.h file were fixed
    RC1:
    - UltraDefrag Scheduler has been retired as a component less functional
      than standard Windows Task Scheduler;